--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script data-who="💎 Made with naker.io 💎" src="https://d23jutsnau9x47.cloudfront.net/back/v1.0.9/viewer.js" data-option="{|environment|:{|gradient|:|horizontal|,|sensitivity|:0.8,|colorStart|:[28,1,90,1],|colorEnd|:[90,25,101,1]},|particle|:{|life|:10000000,|power|:0,|texture|:|https://res.cloudinary.com/naker-io/image/upload/v1566560053/circle_05.png|,|number|:417,|colorStart|:[223,253,35,0.65],|colorEnd|:[142,141,179,0.82],|sizeStart|:0.54,|sizeEnd|:1.08,|direction1|:{|x|:0,|y|:0,|z|:0},|direction2|:{|x|:0,|y|:0,|z|:0}}}" data-container=".backTest"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
